# WeatherLearn

./: .gitignore  LICENSE  README.md  pyproject.toml
WeatherLearn/models/: __init__.py
WeatherLearn/models/layers/: patch_embed.py
WeatherLearn/models/pangu/: pangu.py
WeatherLearn/models/pangu/utils/: earth_position_index.py  pad.py
examples/pangu_lite/: cal_mean_std.py  data_utils.py  download.py  run.sh  test.py  test.sh  train.py
examples/pangu_lite/data/: surface_mean.pkl  surface_std.pkl  upper_air_mean.pkl  upper_air_std.pkl
examples/pangu_lite/train_logs/: logs.csv
finetune/: README.md  download.py  finetune_cpu.py  nc2npy.py  run.sh  slurm-12359622.out  tools.py  train_results.json
inference/: pangu.py  pangu.sh
tests/models/fuxi/: test_cube_embedding.py  test_down_block.py  test_fuxi.py  test_u_transformer.py  test_up_block.py
tests/models/layers/: test_patch_embed2d.py
tests/models/pangu/: test_earth_position_index.py  test_main.py  test_pad_crop.py  test_patch_embed.py  test_patch_recovery.py  test_shift_window_mask.py  test_window_partition_reverse.py
weatherlearn/data_utils/: coroutine_download.py
weatherlearn/models/: __init__.py
weatherlearn/models/fuxi/: fuxi.py
weatherlearn/models/pangu/: pangu.py
weatherlearn/models/pangu/utils/: crop.py  patch_recovery.py
weatherlearn/models/swin_transformer/: swin_transformer_v2.py
